[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/it.ludidorici.scene2sprite/recorder.gd" type="Script" id=1]
[ext_resource path="res://addons/it.ludidorici.scene2sprite/scenetree_control.tscn" type="PackedScene" id=2]

[node name="Control" type="Node"]

script = ExtResource( 1 )
_scene = null
_fps = 30
_duration = 2.0
_size = Vector2( 128, 128 )
_offset = Vector2( 0, 0 )
_cols = 4
_frame_delay = 0

[node name="SceneTreeControl" parent="." index="0" instance=ExtResource( 2 )]

margin_left = 200.0

[node name="Tools" type="Panel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Split" type="VSplitContainer" parent="Tools" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
split_offset = 214
collapsed = false
dragger_visibility = 0

[node name="Box" type="VBoxContainer" parent="Tools/Split" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 195.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Color" type="HBoxContainer" parent="Tools/Split/Box" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 195.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0

[node name="Label" type="Label" parent="Tools/Split/Box/Color" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 101.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Reference Color"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ReferenceColorValue" type="ColorPickerButton" parent="Tools/Split/Box/Color" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 105.0
margin_right = 195.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
color = Color( 1, 0, 0, 1 )
edit_alpha = true

[node name="Size" type="HBoxContainer" parent="Tools/Split/Box" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 195.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0

[node name="Label" type="Label" parent="Tools/Split/Box/Size" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 26.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Size"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XVal" type="SpinBox" parent="Tools/Split/Box/Size" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_right = 110.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 1.0
max_value = 2048.0
step = 1.0
page = 0.0
value = 128.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = "px"

[node name="YVal" type="SpinBox" parent="Tools/Split/Box/Size" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_right = 195.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 1.0
max_value = 2048.0
step = 1.0
page = 0.0
value = 128.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = "px"

[node name="Duration" type="HBoxContainer" parent="Tools/Split/Box" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 195.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0

[node name="Label" type="Label" parent="Tools/Split/Box/Duration" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 59.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Duration:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DurationVal" type="SpinBox" parent="Tools/Split/Box/Duration" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 63.0
margin_right = 195.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 0.01
max_value = 10.0
step = 0.01
page = 0.0
value = 2.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = "s"

[node name="Offset" type="HBoxContainer" parent="Tools/Split/Box" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 195.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0

[node name="Label" type="Label" parent="Tools/Split/Box/Offset" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 39.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Offset"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XVal" type="SpinBox" parent="Tools/Split/Box/Offset" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 43.0
margin_right = 117.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -10000.0
max_value = 10000.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = "px"

[node name="YVal" type="SpinBox" parent="Tools/Split/Box/Offset" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 121.0
margin_right = 195.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = -10000.0
max_value = 10000.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = "px"

[node name="Delay" type="HBoxContainer" parent="Tools/Split/Box" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 195.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0

[node name="Label" type="Label" parent="Tools/Split/Box/Delay" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 36.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Delay"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DelayVal" type="SpinBox" parent="Tools/Split/Box/Delay" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 195.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 0.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = "frames"

[node name="FPS" type="HBoxContainer" parent="Tools/Split/Box" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 136.0
margin_right = 195.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0

[node name="Label" type="Label" parent="Tools/Split/Box/FPS" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 69.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Target FPS:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FPSVal" type="SpinBox" parent="Tools/Split/Box/FPS" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 73.0
margin_right = 195.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 1.0
max_value = 120.0
step = 1.0
page = 0.0
value = 30.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Cols" type="HBoxContainer" parent="Tools/Split/Box" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 164.0
margin_right = 195.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 0

[node name="Label" type="Label" parent="Tools/Split/Box/Cols" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Sprite columns:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ColsVal" type="SpinBox" parent="Tools/Split/Box/Cols" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 195.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 1.0
max_value = 1000.0
step = 1.0
page = 0.0
value = 4.0
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Math" type="Label" parent="Tools/Split/Box" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 192.0
margin_right = 195.0
margin_bottom = 206.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Load Scene" type="Button" parent="Tools/Split/Box" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 195.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load Scene"
flat = false
align = 1

[node name="Generate" type="Button" parent="Tools/Split/Box" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 234.0
margin_right = 195.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Generate"
flat = false
align = 1

[node name="Save" type="Button" parent="Tools/Split/Box" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 258.0
margin_right = 195.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false
align = 1

[node name="PreviewImage" type="TextureRect" parent="Tools/Split/Box" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 282.0
margin_right = 195.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Log" type="RichTextLabel" parent="Tools/Split" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 580.0
margin_right = 200.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 80 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false

[node name="SaveDialog" type="FileDialog" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Save a File"
resizable = false
dialog_hide_on_ok = true
mode_overrides_title = true
mode = 4
access = 2
filters = PoolStringArray( "*.png" )
show_hidden_files = false
current_dir = "/home/fales/Programming/workspaces/git/scene-recorder/scenerec"
current_file = ""
current_path = "/home/fales/Programming/workspaces/git/scene-recorder/scenerec/"

[node name="LoadDialog" type="FileDialog" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Open a File"
resizable = false
dialog_hide_on_ok = true
mode_overrides_title = true
mode = 0
access = 2
filters = PoolStringArray( "*.tscn", "*.xscn", "*.scn" )
show_hidden_files = false
current_dir = "/home/fales/Programming/workspaces/git/scene-recorder/scenerec"
current_file = ""
current_path = "/home/fales/Programming/workspaces/git/scene-recorder/scenerec/"

[node name="AcceptDialog" type="AcceptDialog" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 240.0
margin_top = 110.0
margin_right = -240.0
margin_bottom = -110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Alert!"
resizable = false
dialog_hide_on_ok = true
_sections_unfolded = [ "Margin" ]

[node name="PreviewDialog" type="AcceptDialog" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Alert!"
resizable = false
dialog_hide_on_ok = true
_sections_unfolded = [ "Margin" ]

[node name="TextureFrame" type="TextureRect" parent="PreviewDialog" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
expand = true
stretch_mode = 6

[connection signal="color_changed" from="Tools/Split/Box/Color/ReferenceColorValue" to="." method="_on_reference_color_changed"]

[connection signal="value_changed" from="Tools/Split/Box/Size/XVal" to="." method="_on_x_size_value_changed"]

[connection signal="value_changed" from="Tools/Split/Box/Size/YVal" to="." method="_on_y_size_value_changed"]

[connection signal="value_changed" from="Tools/Split/Box/Duration/DurationVal" to="." method="_on_duration_value_changed"]

[connection signal="value_changed" from="Tools/Split/Box/Offset/XVal" to="." method="_on_offset_XVal_value_changed"]

[connection signal="value_changed" from="Tools/Split/Box/Offset/YVal" to="." method="_on_offset_YVal_value_changed"]

[connection signal="value_changed" from="Tools/Split/Box/Delay/DelayVal" to="." method="_on_frame_delay_value_changed"]

[connection signal="value_changed" from="Tools/Split/Box/FPS/FPSVal" to="." method="_on_fps_value_changed"]

[connection signal="value_changed" from="Tools/Split/Box/Cols/ColsVal" to="." method="_on_cols_value_changed"]

[connection signal="pressed" from="Tools/Split/Box/Load Scene" to="." method="_on_load_scene_pressed"]

[connection signal="pressed" from="Tools/Split/Box/Generate" to="." method="_on_generate_pressed"]

[connection signal="pressed" from="Tools/Split/Box/Save" to="." method="_on_save_pressed"]

[connection signal="gui_input" from="Tools/Split/Box/PreviewImage" to="." method="_on_previewImage_input_event"]


